@@ -20,7 +20,8 @@
 
 (define-structure sawfish.wm.tabs.tab
 
-    (export tab-add-to-group)
+    (export tab-add-to-group
+            raise-tabs-on-hover-setter)
 
     (open rep
           rep.system
