@@ -1,3 +1,13 @@
+2009-10-13  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/tab.jl
+	* lisp/sawfish/wm/ext/edge-flip.jl
+	* lisp/sawfish/wm/workspace.jl: export setter functions
+					- raise-tabs-on-hover-setter
+					- edge-flip-enable
+					- display-ws-name-setter
+
+	* OPTIONS: updated
+
 2009-10-09  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/menus.jl: added "Reload Appsmenu" entry
 
